--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.8",
-    "@heroicons/react": "^2.2.0",
     "clsx": "^2.1.1",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.3.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
