Finalize maximal minimal UI and build configuration

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
+    "dev": "cross-env TAILWIND_DISABLE_LIGHTNINGCSS=1 next dev --turbopack",
+    "build": "cross-env TAILWIND_DISABLE_LIGHTNINGCSS=1 next build",
+    "start": "cross-env TAILWIND_DISABLE_LIGHTNINGCSS=1 next start",
     "lint": "eslint",
     "test": "vitest run"
   },
@@ -27,9 +27,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/testing-library__jest-dom": "^5.14.9",
+    "cross-env": "^10.1.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "jsdom": "^27.0.0",
+    "lightningcss": "^1.30.2",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^3.2.4"
